[gd_scene load_steps=7 format=3 uid="uid://c04d4e28foull"]

[ext_resource type="Script" uid="uid://bgbq5ixkgxabq" path="res://scripts/interactable.gd" id="1_ojdgt"]
[ext_resource type="Script" uid="uid://cy6wwse6u2l54" path="res://scripts/waiting_timer.gd" id="2_mcna6"]
[ext_resource type="Texture2D" uid="uid://cvgbefpijqg6f" path="res://assets/ui/progress_bar_base.png" id="2_q4x1i"]
[ext_resource type="Texture2D" uid="uid://83eifyama153" path="res://assets/ui/progress_bar_progress.png" id="3_1eopo"]
[ext_resource type="Script" uid="uid://sdlmjsglx0vf" path="res://scripts/timer_display_position.gd" id="5_pv7lh"]
[ext_resource type="Texture2D" uid="uid://cntiqt382e2mc" path="res://assets/ui/e_to_interact.png" id="9_j1cl7"]

[node name="Interactable" type="Area2D"]
script = ExtResource("1_ojdgt")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-70, -40, -40, -40, -40, -70, 40, -70, 40, -40, 70, -40, 70, 40, 40, 40, 40, 70, -40, 70, -40, 40, -70, 40)

[node name="WaitingTimer" type="Timer" parent="."]
one_shot = true
script = ExtResource("2_mcna6")

[node name="TimerDisplay" type="TextureProgressBar" parent="WaitingTimer"]
visible = false
z_index = 3
offset_left = 8.0
offset_top = -38.0
offset_right = 180.0
offset_bottom = 134.0
scale = Vector2(0.17438, 0.17438)
fill_mode = 4
texture_under = ExtResource("2_q4x1i")
texture_progress = ExtResource("3_1eopo")
script = ExtResource("5_pv7lh")

[node name="InteractPopup" type="Sprite2D" parent="."]
visible = false
position = Vector2(-30, -30)
scale = Vector2(0.14, 0.14)
texture = ExtResource("9_j1cl7")
